fixed no scrollbar issue

--- a/public/styles.css
+++ b/public/styles.css
@@ -431,7 +431,7 @@ h1 {
 
 body {
   width: 100vw;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 *, ::before, ::after {
